# drift-guard

./: .gitignore  QUICKSTART.md  README.md
backend/: .gitignore  Cargo.toml  drift_guard.db-shm  drift_guard.db-wal
backend/.sqlx/: query-01546a8d59b81dbb8c34b88e5a523709f919631b5873d0b6983da8bf5f0e6bc9.json  query-0b94d02937c42f82e944c013399b527ca1e5aa5c5df196012aeb39a72552b8e5.json  query-15eba4457b096a8ad6f106fd7a491590d516610d7f2645e8d2e2dab774dab20a.json  query-17c43f493799938959ff2be3efbe5b9faf1789e2e770e8a0b174230b8b1b8f1f.json  query-1ed56a2d1c587331a9509b6d444ea1f211d563e2f5208ba5080262a85ba259a1.json  query-88c3544592d6b72f7377a26fe6ceaf3c71dfda6b968541734e0ec769c11e7b79.json  query-a76cfebf6ad20076069d0e1b18a11faa8143cb557d069dd299e3c9dbb3d5507d.json  query-abec684a717a15b6af488b5e2d99c1eae2441a97cf95e719d86ffc18a3e1e207.json  query-c6d54a2e50e2400e34bfa150f2c3a02db60072bd3a158170354e9f69296ff3de.json  query-fd5a40160d6b129a1261dce7791823e68b2f625cc535a7e667b3d04470fedd0b.json
backend/migrations/: 001_initial.sql
backend/src/: lib.rs  main.rs  models.rs
backend/src/routes/: alerts.rs  baseline.rs  incoming.rs  mod.rs  projects.rs
backend/src/services/: alert_engine.rs  baseline_builder.rs  drift_evaluator.rs  mod.rs
backend/src/storage/: alerts.rs  baselines.rs  mod.rs  projects.rs
backend/src/utils/: csv_parser.rs  drift.rs  mod.rs
backend/tests/: integration_test.rs
frontend/: .cypressignore  angular.json  cypress.config.ts  jest.config.js  karma.conf.js  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json
(+61 files in other folders)
