[package]
name = "drift-guard-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "drift_guard_backend"
path = "src/lib.rs"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }
tokio = { version = "1.35", features = ["full"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"

[dev-dependencies]

